library/src/test/resources/my-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: my-app
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
